--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,5 @@ New_Data
 Raw_data
 Session1
 Session2
-<<<<<<< HEAD
 Session3
-=======
-Session3
->>>>>>> 549ac9677 (f)
+Results_of_feature_selection
